[package]
name = "PepperoniBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
enum-iterator = "1.2.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
wither = "0.9.0"
